# pos_system_v2

./: .gitignore  Makefile  README.md  autoupdater.conf  autoupdater.sh  config.py  db.sqlite3  docker-compose-deploy.yml  docker-compose.yml  dump.rdb  erl_crash.dump  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_v2.sh  setup.sh  todo.md
admin/: __init__.py
admin/api/: deps.py  products.py  users.py
admin/crud/: orders.py  products.py  users.py
admin/schemas/: orders.py  products.py  users.py
alembic/versions/: 06a5d3798ed3_updating_models_schema.py  3343ebe1e301_updating_models.py  3d91be8f201e_update_models.py
auth/: __init__.py  crud.py  schemas.py
backend/: README.md  __init__.py  __main__.py  endpoints.md  main.py
backend/admin/: Dockerfile  __init__.py  config.py  requirements.txt
backend/alembic/: env.py
backend/auth/: Dockerfile  __init__.py  config.py  crud.py  deps.py  requirements.txt  schema.py  schemas.py
backend/database/: Dockerfile  __init__.py  config.py  database.py  rabbitmq_client.py  requirements.txt
backend/order/: __init__.py  config.py  crud.py  deps.py  schemas.py
backend/printer/: Dockerfile  README.md  __init__.py  agent.py  builder.py  config.py  crud.py  deps.py  install.bat  requirements.txt  schemas.py  service_client.py
database/: __init__.py
frontend/: Dockerfile  DockerfilePublic  eslint.config.js  nginx.conf  nginx.local.conf  package-lock.json  package.json  vite.config.ts
order/: __init__.py  crud.py  deps.py  schemas.py  websocket_manager.py
shared/: rabbitmq_client.py  redis_client.py
(+107 files in other folders)
